(increase version minor) Added documentation.
Also extra improvements to NLTE computations, including memory management and bugfixes.

--- a/docs/src/1_examples/0_creating_models/0_create_analytic_disk.ipynb
+++ b/docs/src/1_examples/0_creating_models/0_create_analytic_disk.ipynb
@@ -426,15 +426,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now all data is read, we can use it to construct a Magritte model.\n",
+    "Now all data is read, we can use it to construct a Magrittetorch model.\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
     "Warning\n",
     "\n",
-    "Since we do not aim to do self-consistent non-LTE simulations in these examples, we only consider the first radiative transition of CO (J=1-0). To consider all transitions, use `setup.set_linedata_from_LAMDA_file` as in the commented line below it.\n",
-    "We also only consider 2 rays here (up and down the direction we want to image). To consider all directions, comment out the indecated lines and use `setup.set_uniform_rays` as in the commented line below.\n",
-    "    \n",
+    "Including all radiative transitions can be computationally expensive (both in time and memory cost) for self-consistent NLTE radiative transfer. For LTE radiative transfer, this is not the case, altough if one wants to image a specific line, that line must be in the list of considered transitions. For these examples, we include the first 10 radiative transitions of CO (J=1-0 to J=10-9). To consider all transitions, use `setup.set_linedata_from_LAMDA_file` as in the commented line below it.\n",
+    "\n",
     "</div>"
    ]
   },
@@ -480,10 +479,10 @@
     "model = setup.set_boundary_condition_CMB  (model) # Set CMB as boundary condition\n",
     "model = setup.set_uniform_rays            (model, 12) # Number of rays for NLTE raytracing; has be of the form 12*2**n\n",
     "\n",
-    "#As this example does not do NLTE, we might as well only consider the first transition of CO\n",
-    "model = setup.set_linedata_from_LAMDA_file(model, lamda_file, {'considered transitions': [0]})\n",
+    "#As this example does not do NLTE, we might as well only consider the first 10 transitions of CO\n",
+    "model = setup.set_linedata_from_LAMDA_file(model, lamda_file, {'considered transitions': [i for i in range(10)]})\n",
     "# model = setup.set_linedata_from_LAMDA_file(model, lamda_file)   # Consider all transitions\n",
-    "model = setup.set_quadrature              (model, 51) # Set number of quadrature points\n",
+    "model = setup.set_quadrature              (model, 7) # Set number of quadrature points for NLTE radiative transfer\n",
     "\n",
     "# And write the model to disk\n",
     "model.write()"
